made manu button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
                         <li><a href="mailto:kawatai0101@gmail.com">Contact</a></li>
                     </ul>
                 </nav>
+                <nav>
+                    <ul class="main-nav-button">
+                        <input id="drawer_input" class="drawer_hidden" type="checkbox">
+                        <label for="drawer_input" class="drawer_open"><span></span></label>
+                        <nav class="nav_content">
+                            <ul class="nav_list">
+                                <li class="nav_item"><a href="index.html">Home</a></li>
+                                <li class="nav_item"><a href="Profile.html">Profile</a></li>
+                                <li class="nav_item"><a href="Article.html">Article</a></li>
+                                <li class="nav_item"><a href="mailto:kawatai0101@gmail.com">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </ul>
+                </nav>
             </header>
         </div>
     </body>
