--- a/profile/index.html
+++ b/profile/index.html
@@ -28,7 +28,10 @@
         <div id="profile" class="big-bg">
             <header class="page-header wrapper">
                 <h1 class="logo">Taichi Kawaguchi</h1>
-                <nav>
+                <div class="nav">
+                    <input id="drawer_input" class="drawer_hidden" type="checkbox">
+                    <label for="drawer_input" class="drawer_open"><span></span></label>
+                <nav class="nav_content">
                     <ul class="main-nav">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="index.html">Profile</a></li>
@@ -36,6 +39,7 @@
                         <li><a href="mailto:kawatai0101@gmail.com">Contact</a></li>
                     </ul>
                 </nav>
+                </div>
             </header>
             <div class="wrapper">
                 <h2 class="page-title">Profile</h2>
